--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
+    "mocha": "^5.1.0",
     "morgan": "^1.9.0",
-    "sequelize": "^4.37.6"
+    "sequelize": "^4.37.6",
+    "should": "^13.2.1",
+    "supertest": "^3.0.0"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/mocha/bin/mocha ./tests/*/*.spec.js",
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
