mocha가 자동으로 종료되지 않던 문제 해결 - mocha v4부터 --exit 플래그를 붙여야 테스트 후 프로세스가 종료됨

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "./node_modules/mocha/bin/mocha ./tests/*/*.spec.js",
+    "test": "./node_modules/mocha/bin/mocha --exit ./tests/*/*.spec.js",
     "start": "node app.js"
   },
   "repository": {
