--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
+    "lodash": "^4.17.10",
     "mocha": "^5.1.0",
     "morgan": "^1.9.0",
     "sequelize": "^4.37.6",
