--- a/package.json
+++ b/package.json
@@ -5,18 +5,23 @@
   "main": "app.js",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "cors": "^2.8.4",
     "express": "^4.16.3",
     "lodash": "^4.17.10",
     "mocha": "^5.1.0",
     "morgan": "^1.9.0",
     "sequelize": "^4.37.6",
     "should": "^13.2.1",
-    "supertest": "^3.0.0"
+    "supertest": "^3.0.0",
+    "swagger": "^0.7.5",
+    "swagger-express-mw": "^0.7.0",
+    "swagger-tools": "^0.10.3"
   },
   "devDependencies": {},
   "scripts": {
     "test": "./node_modules/mocha/bin/mocha --exit ./tests/*/*.spec.js",
-    "start": "node app.js"
+    "start": "node app.js",
+    "doc-edit": "swagger_swagger_fileName=swagger/swagger.yaml swagger project edit"
   },
   "repository": {
     "type": "git",
