--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "sequelize": "^4.37.6",
     "should": "^13.2.1",
     "supertest": "^3.0.0",
-    "swagger": "^0.7.5",
     "swagger-express-mw": "^0.7.0",
     "swagger-tools": "^0.10.3"
   },
@@ -21,7 +20,7 @@
   "scripts": {
     "test": "./node_modules/mocha/bin/mocha --exit ./tests/*/*.spec.js",
     "start": "node app.js",
-    "doc-edit": "swagger_swagger_fileName=swagger/swagger.yaml ./node_modules/.bin/swagger project edit"
+    "doc-edit": "swagger_swagger_fileName=swagger/swagger.yaml swagger project edit"
   },
   "repository": {
     "type": "git",
