--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lodash": "^4.17.10",
     "mocha": "^5.1.0",
     "morgan": "^1.9.0",
-    "sequelize": "^4.37.6",
+    "mysql2": "^1.5.3",
+    "sequelize": "^4.37.10",
     "should": "^13.2.1",
     "supertest": "^3.0.0",
     "swagger-express-mw": "^0.7.0",
