--- a/.gitignore
+++ b/.gitignore
@@ -140,4 +140,6 @@ typings/
 ### package-lock.json
 package-lock.json
 
+### 요청 샘플 파일
+RequestSamples/
 # End of https://www.gitignore.io/api/node,intellij,visualstudiocode
