--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
+    "debug": "^3.1.0",
     "express": "^4.16.3",
     "lodash": "^4.17.10",
     "mocha": "^5.1.0",
@@ -27,7 +28,7 @@
   },
   "scripts": {
     "test": "./node_modules/mocha/bin/mocha --exit ./tests/*/*.spec.js",
-    "start": "node app.js",
+    "start": "DEBUG=server*,api* node app.js",
     "doc-edit": "swagger_swagger_fileName=swagger/swagger.yaml swagger project edit",
     "lint": "./node_modules/.bin/eslint . ;exit 0",
     "lint-fix": "./node_modules/.bin/eslint --fix . ;exit 0",
