--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
     "mocha": "^5.1.0",
     "mongoose": "^5.1.4",
     "morgan": "^1.9.0",
+    "nodemailer": "^4.6.6",
+    "nodemailer-smtp-pool": "^2.8.3",
+    "redis": "^2.8.0",
     "should": "^13.2.1",
     "supertest": "^3.0.0",
     "swagger-express-mw": "^0.7.0",
-    "swagger-tools": "^0.10.3"
+    "swagger-tools": "^0.10.3",
+    "uuid": "^3.2.1"
   },
   "devDependencies": {
     "eslint": "^4.19.1",
