--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,6 +22,7 @@ jobs:
 
       - run:
         command: |
+          pip3 install virtualenv
           virtualenv -p python3 .venv
           . .venv/bin/activate
           pip3 install -r requirements.txt
