--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
       # specify the version you desire here
       - image: circleci/python:3.6.5
 
-    working_directory: ~/repo/Server/
+    working_directory: ~/repo/
 
     steps:
       - checkout
@@ -22,6 +22,7 @@ jobs:
 
       - run:
           command: |
+            cd Server/
             pip3 install virtualenv
             virtualenv -p python3 .venv;
             . .venv/bin/activate;
