--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,15 +17,14 @@ jobs:
       # Download and cache dependencies
       - restore_cache:
           keys:
-            - deps1-{{ .Brancch }}-{{ checksum "requirements.txt" }}
+            - deps1-{{ .Branch }}-{{ checksum "requirements.txt" }}
             # fallback to using the latest cache if no exact match is found
 
       - run:
           command: |
             cd Server/
             pip3 install virtualenv
-            virtualenv -p python3 .venv;
-            . .venv/bin/activate;
+            virtualenv -p python3 .venv
+            . .venv/bin/activate
             pip3 install -r requirements.txt
-
-      - run: python3 -m "nose" tests/__init__.py
+            python3 -m "nose" tests/__init__.py
