--- a/Server/requirements.txt
+++ b/Server/requirements.txt
@@ -1,10 +1,15 @@
 aniso8601==3.0.2
+blinker==1.4
+certifi==2018.4.16
+chardet==3.0.4
 click==6.7
 flasgger==0.9.0
 Flask==1.0.2
 Flask-Cors==3.0.6
 Flask-JWT-Extended==3.10.0
+Flask-Mail==0.9.1
 Flask-RESTful==0.3.6
+idna==2.7
 itsdangerous==0.24
 Jinja2==2.10
 jsonschema==2.6.0
@@ -17,5 +22,7 @@ pymongo==3.6.1
 pytz==2018.4
 PyYAML==3.12
 redis==2.10.6
+requests==2.19.1
 six==1.11.0
+urllib3==1.23
 Werkzeug==0.14.1
