--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
     docker:
       # specify the version you desire here
       - image: circleci/python:3.6.5
-
+      - image: mongo
     working_directory: ~/repo/
 
     steps:
