--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,7 @@ jobs:
       # specify the version you desire here
       - image: circleci/python:3.6.5
       - image: mongo
+      - image: redis
     working_directory: ~/repo/
 
     steps:
